--- a/.github/workflows/continuos-integration-workflow.yml
+++ b/.github/workflows/continuos-integration-workflow.yml
@@ -8,6 +8,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Hello world
+      uses: actions/hello-world-javascript-action@v1.1 # Name of the action. This uses https://github.com/actions/hello-world-javascript-action
+      with:                                            # This section is needed if you need to pass arg
 
-    - name: Hello world       # Name of step
-      run: echo 'Hello world' # Command to run
+      uments to the action
+        who-to-greet: 'Mona the Octocat'
